# NSRR-tools

./: .gitignore  ANNOTATION_PATH_IMPLEMENTATION.md  BUGFIX_VARIABLE_DURATION_STAGES.md  CHANNEL_CONFIG_UPDATES.md  CHANNEL_SELECTION_GUIDE.md  CLASSIFICATION_TARGETS_ANALYSIS.md  COMPREHENSIVE_CHANNELS_UPDATE.md  DATASET_ADAPTERS_SUMMARY.md  HDF5_FORMAT_VERIFICATION.md  IMPLEMENTATION_CHANNEL_LIMITING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  MULTI_CSV_METADATA_PATTERN.md  NEW_PC_AGENT_HANDOFF.md  NEW_PC_AGENT_PROMPT.md  PHASE2_IMPLEMENTATION_PLAN.md  README.md  REPROCESS_ANNOTATIONS_GUIDE.md  SHHS_ANNOTATION_ANALYSIS.md  SIGNAL_PROCESSING_OPTIMIZATION.md  SLEEPFM_CHANNEL_FINDINGS.md  STAGES_ANNOTATION_FIXES.md  STAGES_DATA_NOTES.md  STAGES_ID_MATCHING_RESOLUTION.md  STAGES_ID_MISMATCH_DEBUG_GUIDE.md  TARGET_EXTRACTION_IMPLEMENTATION_PLAN.md  XML_TO_CSV_README.md  compare_all_metadata.py  data_preparation.tex  debug_apples_c3m2.py  debug_apples_visits.py  debug_eeg_detection.py  debug_shhs_merge.py  diagnose_sync_difference.py  inspect_current_state.py  inspect_metadata.py  profile_signal_processing.py  proposal for objective3.tex  pyproject.toml  test_adapters_real_files.py  (+15 more)
configs/: channel_definitions.yaml  channel_definitions_old.yaml  modality_groups.yaml  paths.yaml  phase0_config.yaml  phase0_v2_config.yaml  preprocessing_params.yaml  target_extraction.yaml  target_extraction_v2.yaml
data_manifests/: README.md
docs/: EXPERIMENTS_GUIDE.md  PHASE0_IMPLEMENTATION.md  PHASE0_PLAN.md  sleep_tasks_unified_design_and_implementation_guide(new).md  (+4 more)
(+120 files in other folders)
